# Main_Scrapy_Dev

./: .gitignore  Dockerfile  README.md  beeswax.csv  bundle_domain_segragation.ipynb  data_processing.ipynb  data_processing_SSP_BD.ipynb  data_processing_app_ads_txt.ipynb  docker_CLI.txt  main.py  main_run.sh  merge_parquet.py  pyproject.toml
ads_txt/: loguru_loggins.py  main copy.py  main.py  main_batch.py  main_ss_BD.py  main_ssp_run.py  scrapy.cfg
ads_txt/ads_txt/: email_utils.py  items.py  middlewares.py  pipelines.py  settings.py  utils.py
ads_txt/ads_txt/spiders/: scraper_spider.py
